--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-17 Mon 18:23]
+#+CAPTION: Clock summary at [2016-10-17 Mon 20:17]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *64:13* |       |       | 100.0 |
+| *Total time*                                                                | *64:33* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 64:13   |       |       | 100.0 |
-| Active                                                                      |         | 64:13 |       | 100.0 |
+| Stories                                                                     | 64:33   |       |       | 100.0 |
+| Active                                                                      |         | 64:33 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:32 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.5 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   0.7 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   2.0 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.1 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.3 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |   6.2 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.5 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   1.8 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  23.7 |
-| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.8 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  23.5 |
+| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   0.7 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   2.7 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.3 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  18.4 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  18.3 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.5 |
 | COMPLETED Push stereotypes processing into yarn                             |         |       |  1:51 |   2.9 |
 | COMPLETED Implement defaulting within the profiler                          |         |       |  1:13 |   1.9 |
@@ -45,8 +45,8 @@
 | COMPLETED IOable services                                                   |         |       |  0:06 |   0.2 |
 | COMPLETED Generate skeleton for "non-generatable" files                     |         |       |  0:51 |   1.3 |
 | COMPLETED Merge profiles with processed object in yarn.dia                  |         |       |  2:04 |   3.2 |
-| COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.4 |
-| COMPLETED Perform the archetype / artefact renames                          |         |       |  8:51 |  13.8 |
+| COMPLETED Fix yarn.dia tests                                                |         |       |  2:48 |   4.3 |
+| COMPLETED Perform the archetype / artefact renames                          |         |       |  9:11 |  14.2 |
 | STARTED Integration of stitch and dogen                                     |         |       |  0:27 |   0.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -647,6 +647,7 @@ the expansion somewhere else.
 
 *** COMPLETED Perform the archetype / artefact renames                :story:
     CLOSED: [2016-10-17 Mon 18:11]
+    CLOCK: [2016-10-17 Mon 19:57]--[2016-10-17 Mon 20:17] =>  0:20
     CLOCK: [2016-10-17 Mon 18:05]--[2016-10-17 Mon 18:23] =>  0:18
     CLOCK: [2016-10-17 Mon 17:50]--[2016-10-17 Mon 18:04] =>  0:14
     CLOCK: [2016-10-17 Mon 17:32]--[2016-10-17 Mon 17:49] =>  0:17
@@ -711,7 +712,7 @@ Notes:
   referring to formatters when we mean archetypes and vice-versa.
 - rename formatter container to repository.
 
-*** Introduce artefact sources                                        :story:
+*** STARTED Introduce artefact sources                                :story:
 
 - introduce the concept of artefact source: stock formatter
   (current), wale formatter, wale and stitch formatter,
