--- a/doc/manual/manual.tex
+++ b/doc/manual/manual.tex
@@ -269,73 +269,92 @@ that defines them. It's important to understand that the
 Dogen's key classes; instead, it lives at a higher level. Its
 objective is to provide a narrative that ties all of Dogen into a
 single, coherent and unified whole, creating the conceptual framework
-needed to implement the Vision. Not all of the elements of the
+needed to implement its vision. Not all of the elements of the
 \texttt{conceptual model} map directly to code, and those that do
-don't always map with low impedance mismatches. However, we do strive
+don't always map with a low impedance mismatch. However, we do strive
 to reduce these mismatches as much as possible.
 
-At the highest level of the \texttt{conceptual model} sits the
-\texttt{product}, composed of a set of \texttt{models}. It is up to
-users to add any semantic meaning to these two concepts; from the
-\texttt{conceptual model's} perspective they are just containers. For
-each \texttt{model} there are two important representations: the
-\texttt{input model} and the \texttt{output model}. The \texttt{output
-  model} is made up of a set of files and it is these that the end
-user is interested in. The \texttt{input model} is a representation of
-the \texttt{model} that contains the minimal information required to
-produce the \texttt{output model}. An \texttt{input model} is
-considered well-formed if it follows the rules of one of the
-well-defined \texttt{input model specifications}.
+All the entities that live in the \texttt{conceptual model} are called
+\texttt{conceptual elements}. We shall now define all of the
+\texttt{conceptual elements}, starting from the \texttt{output model}.
 
-The \texttt{output model} is the set of all files located below a
-directory called the \texttt{output model directory}, where each file
-is a distinct element in the set. Each file has a one-to-one mapping
-to an \texttt{artefact}. An \texttt{artefact} can be thought of as a
-generalisation of \emph{file}, since the \texttt{artefact} may exist
-in memory as an object, in a database as a record and so forth whereas
+The \texttt{output model} is made up of the set of files the end user
+is interested in generating. These are located below a directory
+called the \texttt{output model directory}, where each file is a
+distinct element in the set. Each file has a one-to-one mapping to an
+\texttt{artefact}. An \texttt{artefact} is a generalisation of the
+notion of \emph{file}, since the \texttt{artefact} may exist in memory
+as an object, in a database as a record and so forth, whereas
 \emph{file} here is understood as the traditional Operative System
 concept. Both files and \texttt{artefacts} have an associated
 \texttt{content}, defined as a set of bytes. Note that two files are
 entities with distinct identities even if they have the same content,
 and the same applies to \texttt{artefacts}.
 
-An \texttt{artefact} can have a meta-type associated with it: it's
+An \texttt{artefact} is composed of a set of instances of
+\texttt{structural elements}; these vary depending on the
+artefact. \texttt{structural elements} may contain other
+\texttt{structural elements}. Examples of \texttt{structural elements}
+are: ``C++ header file'', ``class definition'', ``constructor
+definition''. Some of these \texttt{structural elements} may be common
+across artefacts; these are called \texttt{aspects}.
+
+An \texttt{artefact} may have a meta-type associated with it: its
 \texttt{archetype}.  An \texttt{archetype} is an entity with
-identity. The objective of the \texttt{archetype} is to store the
-smallest subset of information needed to recreate the \texttt{content}
-of a set of \texttt{artefacts}. Whilst \texttt{artefacts} are relative
-to an \texttt{output model}, \texttt{archetypes} are common to all
-models because, by definition, their objective is to extract
-commonalities between models. An example of an \texttt{archetype} is:
-``header file providing the definition of a domain type in a
-programming language P''.
+identity. An \texttt{archetype} is associated with a set of
+\texttt{structural elements}. Not all \texttt{structural elements}
+that belong to an \texttt{archetype} need be present on all of its
+associated \texttt{artefacts}; however, all \texttt{structural
+  elements} of an \texttt{artefact} must be contained in its
+\texttt{archetype}. In addition, whilst \texttt{artefacts} are
+specific to an \texttt{output model}, \texttt{archetypes} span a set
+of \texttt{output models} because, by definition, their objective is
+to extract structural commonalities between them. An example of an
+\texttt{archetype} is: ``header file providing the definition of a
+domain type in a programming language P''.
 
-The \texttt{identity archetype} is defined as an \texttt{archetype}
-which stores the entirety of the content of one or more
-\texttt{artefacts}~--- rather than a subset
-
-A \texttt{formatter} is defined as a function that takes in an
-\texttt{archetype} plus possibly some additional,
-\texttt{formatter}-dependent parameters, and produces a set of
-\texttt{artefacts}. Each \texttt{formatter} maps to one and only one
-\texttt{archetype}. An \texttt{archetype} can map to more than one
-\texttt{formatter}.
+A \texttt{formatting function} or just \texttt{formatter} is defined
+as a function that takes in a set of inputs and produces a set of
+\texttt{artefacts}. A \texttt{formatting function} is associated with
+one and only one \texttt{archetype}. However, an \texttt{archetype}
+can map to zero, one or many \texttt{formatting functions}.
 
 \texttt{artefacts}~--- and, by implication, \texttt{archetypes} and
-\texttt{formatters}~--- can be grouped into \texttt{facets}. A
-\texttt{facet} is a set of \texttt{artefacts} with a common,
-well-defined purpose such as for example ``artefacts that provide all
+\texttt{formatting functions}~--- can be grouped into
+\texttt{facets}. A \texttt{facet} is a set of elements with a common,
+well-defined purpose such as for example ``all artefacts that provide
 definitions of domain types in a programming language
 P''. \texttt{facets} can be grouped into \texttt{kernels}: these are
 sets of \texttt{facets} that provide related functionality such as for
 example ``generating domain models for a programming language P''.
 
-An \texttt{archetype} can have a meta-type associated with it: its
-\texttt{modeling element}, often abbreviated to just
-\texttt{element}. A \texttt{modeling element} is an entity with
-identity. The objective of the \texttt{element} is to store the
-smallest subset of information needed to recreate its set of
-associated \texttt{archetypes}.
+An \texttt{archetype} has a meta-type: its \texttt{modeling
+  element}. A \texttt{modeling element} is an entity with
+identity. The objective of the \texttt{element} is to factor out the
+information needed to recreate its set of associated
+\texttt{archetypes}. Example: if the user intends to generate a domain
+model with a class called ``hello'', there will be a one-to-one
+mapping to a \texttt{modeling element} representing
+``hello''. However, its important to note that the \texttt{modeling
+  element} \emph{is not a programming language construct}; it is
+merely mappable to them. This means that the same \texttt{modeling
+  element} can be mapped to constructs in many programming languages,
+depending on their structure. Other modeling elements may specialise
+in different kinds of content such as build system information and so
+on.
+
+A \textt{model} is then a container of \texttt{modeling elements}.  A
+\texttt{product} is composed of a set of \texttt{models}. It is up to
+users to add any semantic meaning to these two concepts; from the
+\texttt{conceptual model's} perspective these are just containers. For
+each \texttt{model} there are two important representations: the
+\texttt{input model} and the \texttt{output model}~--- the latter as
+defined above.
+
+The \texttt{input model} contains the minimal information required to
+produce the \texttt{output model}. An \texttt{input model} is
+considered well-formed if it follows the rules of one of the
+well-defined \texttt{input model specifications}.
 
 There are three \texttt{spaces} in the \texttt{conceptual model},
 arranged in a hierarchy:
